<resources>
    <string name="app_name">AppAtd3</string>

    <!-- Strings para activity_main.xml -->
    <string name="content_desc_flames">Imagem de chamas no fundo</string>
    <string name="content_desc_logo">Logo do aplicativo</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="button_login">Entrar</string>
    <string name="button_register_prompt">Não possui uma conta? Cadastre-se</string>
</resources>